--- a/our_association.html
+++ b/our_association.html
@@ -138,7 +138,7 @@
 
 <!-- START SLIDE SECTION -->
     <div class="container">
-        <br><div class="p-3 mb-2 bg-warning text-dark"><h3 >Our_Association</h3></div>
+        <br><div class="p-3 mb-2 bg-warning text-dark"><h3 >Our Association</h3></div>
         <div class="row justify-content-center">
             <div class="col-lg-12 col-md-10 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
